--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -6,7 +6,7 @@
     <title>Assignment Second</title>
 </head>
 <body>
-
+     <h1>Government Tax Calculator </h1>
     <label for="input">
     <input type="text" id="input"/>
      </label>
